infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: server-service
            port: 
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port: 
              number: 3000
